[tool.poetry]
name = "optrush"
version = "0.1.0"
description = "Option pricing with Python & Rust"
authors = ["chenxu <chen.xu.wq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "<2.0.0"
pandas = "^2.2.3"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
scipy = "^1.14.1"
maturin = "^1.7.4"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
mypy = "^1.13.0"
lxml = "^5.3.0"
pytest = "^8.3.3"
coverage = "^7.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

